<resources>
    <string name="app_name">Taxi Yaz</string>
    <string name="search_title">Search</string>
    <string name="search">Search</string>
    <string name="add_new">Add new</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="recent">Recent</string>
    <string name="settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello Settings fragment</string>
    <string name="best_route">Best Route</string>
    <string name="alternative_route">Alternative Route</string>
    <string name="home">Home</string>
    <string name="add_new_node">Add new taxi location</string>
    <string name="rules_text">As far as I\'m aware, you can\'t declare custom fonts in xml or themes.</string>
    <string name="add_node">Add Node</string>
    <string name="available_taxi">Available taxi</string>
    <string name="my_location">My current location</string>
    <string name="pin_map">My pin on map</string>
    <string name="taxi_location">Taxi Location</string>
    <string name="register">Register</string>
    <string name="location_description">Description of location</string>
    <string name="location">Location</string>
    <string name="submit">Submit</string>
    <string name="route_image">Route image</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="rate">Rate the route</string>
    <string name="comment_here">Comment here</string>
    <string name="comment">Comment on the route</string>
    <string name="location_name">Location name</string>
    <string name="price">Price</string>

</resources>